fix reference to your own name!

--- a/groceries.bib
+++ b/groceries.bib
@@ -803,10 +803,10 @@
   langid = {english}
 }
 
-@article{macfarlane2022a,
+@article{macfarlane2022,
   title = {City Parks and Slow Streets: {{A}} Utility-Based Access and Equity Analysis},
   shorttitle = {City Parks and Slow Streets},
-  author = {Macfarlane, Gregory and Voulgaris, Carole Turley and Tapia, Teresa},
+  author = {Macfarlane, Gregory S. and Voulgaris, Carole Turley and Tapia, Teresa},
   year = {2022},
   month = sep,
   journal = {Journal of Transport and Land Use},
