--- a/groceries.bib
+++ b/groceries.bib
@@ -877,7 +877,8 @@
   number = {1},
   pages = {93--114},
   urldate = {2024-05-14},
-  langid = {english}
+  langid = {english},
+  file = {/Users/gregmacfarlane/Zotero/storage/9GBXA39D/Moore - 2022 - Predatory Pricing, Network Effects, and the Food D.pdf}
 }
 
 @misc{nationalhighwaytrafficsafetyadministration2022,
