First round of review sewn up

--- a/Where-s-dinner-coming-from--A-utility-based-investigation-of-access-to-nutrition-in-Utah..tex
+++ b/Where-s-dinner-coming-from--A-utility-based-investigation-of-access-to-nutrition-in-Utah..tex
@@ -7,6 +7,7 @@
   letterpaper,
   number,
   review,
+  doubleblind,
   3p]{elsarticle}
 
 \usepackage{amsmath,amssymb}
@@ -157,7 +158,7 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\journal{WSTLUR Symposium 2024}
+\journal{JTLU}
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
@@ -1578,29 +1579,16 @@ Department of Transportation. The Utah Department of Transportation
 makes no representation or warranty of any kind, and assumes no
 liability therefore.
 
-Student research assistants who collected the store data include Kaeli
-Monahan, Brooke Jones, Emily Aleson, Andrea Barney, Mattie Earnest, Tare
-Ekpagha, Mackay Graper, Olivia Harrison, Mary Jacobsen, Gillian Martin,
-Maggie Plessinger, and Jenna Smith. Madeleine Smith coordinated the data
-collection efforts.
+Witheld for peer review.
 
 Graphics in the document are produced with multiple R packages
 (Arel-Bundock, 2022; Dunnington, 2023; Ram \& Wickham, 2018; Wickham,
 2016).
 
-\subsection*{Author Contribution
-Statement}\label{author-contribution-statement}
-\addcontentsline{toc}{subsection}{Author Contribution Statement}
+\subsection*{Author Contribution Statement}\label{author-contribution-statement}
 
-\markright{Author Contribution Statement}
 
-\textbf{Gregory S. Macfarlane:} Conceptualization, Methodology,
-Software, Resources, Writing - original draft, Visualization,
-Supervision \textbf{Emma Stucki:} Software, Investigation, Data
-curation, Writing - original draft \textbf{Myrranda Salmon:}
-Investigation, Data curation \textbf{Alisha H. Redelfs:} Methodology,
-Resources, Writing - review \& editing \textbf{Lori Spruance:}
-Methodology, Resources, Writing - review \& editing
+Withheld for peer reivew.
 
 \bookmarksetup{startatroot}
 
