--- a/Where-s-dinner-coming-from--A-utility-based-investigation-of-access-to-nutrition-in-Utah..tex
+++ b/Where-s-dinner-coming-from--A-utility-based-investigation-of-access-to-nutrition-in-Utah..tex
@@ -7,7 +7,6 @@
   letterpaper,
   number,
   review,
-  doubleblind,
   3p]{elsarticle}
 
 \usepackage{amsmath,amssymb}
@@ -45,14 +44,28 @@
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{5}
 % Make \paragraph and \subparagraph free-standing
+\makeatletter
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+  \renewcommand{\paragraph}{
+    \@ifstar
+      \xxxParagraphStar
+      \xxxParagraphNoStar
+  }
+  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
+  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+  \renewcommand{\subparagraph}{
+    \@ifstar
+      \xxxSubParagraphStar
+      \xxxSubParagraphNoStar
+  }
+  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
+  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
+\makeatother
 
 
 \providecommand{\tightlist}{%
@@ -68,15 +81,17 @@
 \makesavenoteenv{longtable}
 \usepackage{graphicx}
 \makeatletter
-\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
-\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
-\makeatother
-% Scale images if necessary, so that they will not overflow the page
-% margins by default, and it is still possible to overwrite the defaults
-% using explicit options in \includegraphics[width, height, ...]{}
-\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\newsavebox\pandoc@box
+\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
+  \sbox\pandoc@box{#1}%
+  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
+  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
+  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
+  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
+  \else\usebox{\pandoc@box}%
+  \fi%
+}
 % Set default figure placement to htbp
-\makeatletter
 \def\fps@figure{htbp}
 \makeatother
 % definitions for citeproc citations
@@ -114,6 +129,20 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 \usepackage{rotating}
+\usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage{colortbl}
+\usepackage{pdflscape}
+\usepackage{tabu}
+\usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage[normalem]{ulem}
+\usepackage{makecell}
+\usepackage{xcolor}
 \makeatletter
 \@ifpackageloaded{bookmark}{}{\usepackage{bookmark}}
 \makeatother
@@ -158,17 +187,15 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\journal{JTLU}
-\ifLuaTeX
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
+\journal{WSTLUR Symposium 2024}
+
 \usepackage{bookmark}
 
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Where's dinner coming from? A utility-based investigation of access to nutrition in Utah.},
-  pdfauthor={Gregory S. Macfarlane; Emma Stucki; Myrranda Salmon; Alisha H. Redelfs; Lori A. Spruance},
+  pdfauthor={Gregory S. Macfarlane; Emma Stucki; Alisha H. Redelfs; Lori A. Spruance},
   pdfkeywords={Accessibility, Utility-based access, Access to
 nutrition, Passive location data},
   colorlinks=true,
@@ -177,6 +204,7 @@ nutrition, Passive location data},
   citecolor={Blue},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
+
 
 \setlength{\parindent}{6pt}
 \begin{document}
@@ -189,10 +217,6 @@ access to nutrition in Utah.}
 }
  \ead{gregmacfarlane@byu.edu} 
 \author[1]{Emma Stucki%
-%
-}
-
-\author[1]{Myrranda Salmon%
 %
 }
 
@@ -212,7 +236,6 @@ USA},postcode={84602},postcodesep={}}
 University},city={Provo, Utah USA},postcode={84602},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
-
 
 
 
@@ -250,6 +273,7 @@ nutrition \sep
 \end{keyword}
 \end{frontmatter}
     
+
 \bookmarksetup{startatroot}
 
 \section{Introduction}\label{introduction}
@@ -430,7 +454,7 @@ Figure~\ref{fig-communities}.
 
 \centering{
 
-\includegraphics{03_methods_files/figure-pdf/fig-communities-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{03_methods_files/figure-pdf/fig-communities-1.pdf}}
 
 }
 
@@ -572,8 +596,8 @@ general affordability comparisons between stores.
 
 \centering{
 
-\centering
-\resizebox{\linewidth}{!}{
+\centering\centering
+\resizebox{\ifdim\width>\linewidth\linewidth\else\width\fi}{!}{
 \begin{tabular}[t]{llrrrrrr}
 \toprule
 \multicolumn{2}{c}{ } & \multicolumn{2}{c}{Utah (N=63)} & \multicolumn{2}{c}{Salt Lake (N=39)} & \multicolumn{2}{c}{San Juan (N=50)} \\
@@ -584,7 +608,7 @@ Registers (incl. self checkout) &  & 12.5 & 11.7 & 9.9 & 8.9 & 6.1 & 8.8\\
 NEMS-S availability score &  & 18.7 & 8.4 & 16.2 & 8.1 & 13.2 & 7.6\\
 NEMS-S cost score &  & 1.9 & 2.3 & 2.3 & 2.2 & 1.9 & 1.9\\
 Market basket cost &  & 126.1 & 21.5 & 141.6 & 19.2 & 157.6 & 16.8\\
-\midrule
+\midrule\\
  &  & N & Pct. & N & Pct. & N & Pct.\\
 Type & Convenience Store & 2 & 3.2 & 0 & 0.0 & 10 & 20.0\\
  & Dollar Store & 5 & 7.9 & 11 & 28.2 & 15 & 30.0\\
@@ -642,7 +666,7 @@ block group centroids and Euclidean distances).
 
 \centering{
 
-\includegraphics[width=5in,height=\textheight]{03_methods_files/figure-pdf/fig-marketimp-1.pdf}
+\includegraphics[width=5in,height=\textheight,keepaspectratio]{03_methods_files/figure-pdf/fig-marketimp-1.pdf}
 
 }
 
@@ -762,7 +786,7 @@ these three communities.
 
 \centering{
 
-\includegraphics{04_estimation_files/figure-pdf/fig-nems-market-avail-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{04_estimation_files/figure-pdf/fig-nems-market-avail-1.pdf}}
 
 }
 
@@ -791,7 +815,7 @@ March 2021 and March 2022 in food products (Bureau of Labor Statistics,
 
 \centering{
 
-\includegraphics{04_estimation_files/figure-pdf/fig-nems-cost-avail-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{04_estimation_files/figure-pdf/fig-nems-cost-avail-1.pdf}}
 
 }
 
@@ -999,7 +1023,7 @@ explain more of the model fit than the transportation impedance term.
 
 \centering{
 
-\includegraphics{04_estimation_files/figure-pdf/fig-all-comp-1.pdf}
+\pandocbounded{\includegraphics[keepaspectratio]{04_estimation_files/figure-pdf/fig-all-comp-1.pdf}}
 
 }
 
@@ -1047,7 +1071,7 @@ ethnic minorities in the region.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-ut-1.pdf}
+\includegraphics[width=6in,height=\textheight,keepaspectratio]{04_estimation_files/figure-pdf/fig-map-ut-1.pdf}
 
 }
 
@@ -1083,7 +1107,7 @@ for non-vehicle users.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-1.pdf}
+\includegraphics[width=4in,height=\textheight,keepaspectratio]{04_estimation_files/figure-pdf/fig-map-nocar-1.pdf}
 
 }
 
@@ -1095,7 +1119,7 @@ for non-vehicle users.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-2.pdf}
+\includegraphics[width=4in,height=\textheight,keepaspectratio]{04_estimation_files/figure-pdf/fig-map-nocar-2.pdf}
 
 }
 
@@ -1278,7 +1302,7 @@ compared the change in accessibility resulting from the improvement.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s1results-1.pdf}
+\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s1results-1.pdf}
 
 }
 
@@ -1297,7 +1321,7 @@ a trip to a grocery store.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2results-1.pdf}
+\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s2results-1.pdf}
 
 }
 
@@ -1328,7 +1352,7 @@ close to you are already sufficient.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2sjut-1.pdf}
+\includegraphics[width=4in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s2sjut-1.pdf}
 
 }
 
@@ -1340,7 +1364,7 @@ close to you are already sufficient.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2sjut-2.pdf}
+\includegraphics[width=4in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s2sjut-2.pdf}
 
 }
 
@@ -1366,7 +1390,7 @@ on the order of \$0.25.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s3results-1.pdf}
+\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s3results-1.pdf}
 
 }
 
@@ -1380,7 +1404,7 @@ Lake Valley.}
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s4results-1.pdf}
+\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s4results-1.pdf}
 
 }
 
@@ -1579,16 +1603,29 @@ Department of Transportation. The Utah Department of Transportation
 makes no representation or warranty of any kind, and assumes no
 liability therefore.
 
-Witheld for peer review.
+Student research assistants who collected the store data include Kaeli
+Monahan, Brooke Jones, Emily Aleson, Andrea Barney, Mattie Earnest, Tare
+Ekpagha, Mackay Graper, Olivia Harrison, Mary Jacobsen, Gillian Martin,
+Maggie Plessinger, and Jenna Smith. Madeleine Smith coordinated the data
+collection efforts.
 
 Graphics in the document are produced with multiple R packages
 (Arel-Bundock, 2022; Dunnington, 2023; Ram \& Wickham, 2018; Wickham,
 2016).
 
-\subsection*{Author Contribution Statement}\label{author-contribution-statement}
+\subsection*{Author Contribution
+Statement}\label{author-contribution-statement}
+\addcontentsline{toc}{subsection}{Author Contribution Statement}
 
+\markright{Author Contribution Statement}
 
-Withheld for peer reivew.
+\textbf{Gregory S. Macfarlane:} Conceptualization, Methodology,
+Software, Resources, Writing - original draft, Visualization,
+Supervision \textbf{Emma Stucki:} Software, Investigation, Data
+curation, Writing - original draft \textbf{Myrranda Salmon:}
+Investigation, Data curation \textbf{Alisha H. Redelfs:} Methodology,
+Resources, Writing - review \& editing \textbf{Lori Spruance:}
+Methodology, Resources, Writing - review \& editing
 
 \bookmarksetup{startatroot}
 
@@ -1837,6 +1874,7 @@ Wright, J. D., Donley, A. M., Gualtieri, M. C., \& Strickhouser, S. M.
 \url{https://doi.org/10.1007/s12115-016-9993-8}
 
 \end{CSLReferences}
+
 
 
 
